Use feign client with eureka

--- a/demo-employee-service/src/main/resources/application.yml
+++ b/demo-employee-service/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
   application:
     name: EMPLOYEE-SERVICE
 
+ribbon:
+  eureka:
+    enabled: true
+
 eureka:
   client:
     register-with-eureka: true
